# Yew-Pokedex

./: Cargo.toml  Readme.md  index.html
scss/: index.scss
src/: app.rs  main.rs
src/components/: header.rs  mod.rs  pokemons.rs
src/css/: style.css
